Bring project into compliance with REUSE standard
Signed-off-by: Peter J. Mello <admin@petermello.net>

--- a/I-Nex/i-nex/.settings
+++ b/I-Nex/i-nex/.settings
@@ -93,9 +93,10 @@ File[61]=".src/Memory/i2c.module:10.9"
 File[62]=".src/Memory/MDecode_dimms.module:0.63"
 File[63]="Data/screenfetch-dev:0.3399"
 File[64]=".src/Memory/JEDEC.module:27.54"
-Active=1
-Count=65
+Active=66
+Count=66
 File[65]=".src/System/MUptime.module:21.20"
+File[66]=".src/System/MSystem.module:0.0"
 
 [Watches]
 Count=0
