--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: © 2014 eloaders <eloaders@linux.pl>
+#
+# SPDX-License-Identifier: CC0-1.0
+# ------------------------------------------------------------------------------
+
 [submodule "libcpuid"]
   path = libcpuid
   url = https://github.com/anrieff/libcpuid.git
