Fix icon installation Makefile
Signed-off-by: Peter J. Mello <admin@petermello.net>

--- a/pixmaps/Makefile
+++ b/pixmaps/Makefile
@@ -8,18 +8,19 @@ IMG_SIZES ::= 16 22 32 48 64 128 256
 all: install
 
 install:
-	cp $(CURDIR)/i-nex.png $(CURDIR)/i-nex-256.png
+	@cp $(CURDIR)/i-nex.png $(CURDIR)/i-nex-256.png
 	for px in $(IMG_SIZES) ; do \
+		install -d $(DESTDIR)$(PREFIX)/share/icons/hicolor/$${px}x$${px}/apps
 		cp -f $(CURDIR)/i-nex-$${px}.png \
 			$(DESTDIR)$(PREFIX)/share/icons/hicolor/$${px}x$${px}/apps/i-nex.png ; \
 		chmod 0644 $(DESTDIR)$(PREFIX)/share/icons/hicolor/$${px}x$${px}/apps/i-nex.png ; \
 	done
-	$(RM) $(CURDIR)/i-nex-256.png
+	@$(RM) $(CURDIR)/i-nex-256.png
 
 uninstall:
 	for px in $(IMG_SIZES) ; do \
-		if test -f $(DESTDIR)$(PREFIX)/share/icons/hicolor/$${px}x$${px}/apps/i-nex.png ; then \
-			$(RM) $(DESTDIR)$(PREFIX)/share/icons/hicolor/$${px}x$${px}/apps/i-nex.png ; fi ; \
+		test -f $(DESTDIR)$(PREFIX)/share/icons/hicolor/$${px}x$${px}/apps/i-nex.png && \
+			$(RM) $(DESTDIR)$(PREFIX)/share/icons/hicolor/$${px}x$${px}/apps/i-nex.png ; \
 	done
 
 .PHONY: all install uninstall
