--- a/.bzrignore
+++ b/.bzrignore
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: © 2008-2012 Stéphane Graber <stgraber@stgraber.org>
 # SPDX-FileCopyrightText: © 2020 Peter J. Mello <admin@petermello.net>
 #
-# SPDX-License-Identifier: CC0-1.0
+# SPDX-License-Identifier: LGPL-3.0-or-later
 # ------------------------------------------------------------------------------
 
 #---- Gambas files to ignore (v1)
