--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: © 2014 eloaders <eloaders@linux.pl>
 #
-# SPDX-License-Identifier: CC0-1.0
+# SPDX-License-Identifier: LGPL-3.0-or-later
 # ------------------------------------------------------------------------------
 
 [submodule "libcpuid"]
