Update external library link to libcpuid15
Signed-off-by: Peter J. Mello <admin@petermello.net>

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: © 2020 Peter J. Mello <admin@petermello.net>
 #
-# SPDX-License-Identifier: MPL-2.0
+# SPDX-License-Identifier: CC0-1.0
 #
 # Version: 1.1.0 (Using <https://semver.org/>)
 # Updated: 2020-08-12
