--- a/I-Nex/i-nex/.settings
+++ b/I-Nex/i-nex/.settings
@@ -18,8 +18,9 @@ Geometry=[-9,212,180,180]
 Geometry=[236,249,180,180]
 
 [Executable]
-Path="/home/michal/Pulpit/i-nex.gambas"
-DoNotIncrementVersion=False
+Path="i-nex.gambas"
+DoNotIncrementVersion=True
+NoTestModule=False
 
 [FFind]
 SearchIn="Module"
@@ -37,7 +38,7 @@ File[5]=".src/ScreenShot.class:5.23"
 File[6]=".src/Drives/USB_Drives.module:44.6"
 File[7]=".src/Sound/Asound_Drives.module:18.31"
 File[8]=".src/FReport_Gen.form"
-File[9]=".src/FReport_Gen.class:37.32"
+File[9]=".src/FReport_Gen.class:26.32"
 File[10]=".src/Modules/ChkPrm.module:1.3"
 File[11]=".src/CPU/thermal_zone.module:44.44"
 File[12]=".src/Kernel/FModules.form"
@@ -46,7 +47,7 @@ File[14]=".src/Input_Devices.module:0.48"
 File[15]=".src/Network/Network.module:34.10"
 File[16]=".src/System/Distribution_Detect.module:20.28"
 File[17]=".src/CPU/FFlags.module:20.0"
-File[18]=".src/MAIN/Finfosys.class:1.946"
+File[18]=".src/MAIN/Finfosys.class:0.2"
 File[19]=".src/Network/FNET_R_T.form"
 File[20]=".src/Network/FNET_R_T.class:7.70"
 File[21]=".src/GPU/FGraphic.module:1.8"
@@ -68,7 +69,7 @@ File[36]=".src/Reports/MKERNEL_REPORT.module:0.1"
 File[37]=".src/Reports/MInclude.module:9.6"
 File[38]=".src/Reports/MDRIVES_REPORT.module:16.29"
 File[39]=".src/Modules/FInputDate.form"
-File[40]=".src/MInit.module:27.48"
+File[40]=".src/MInit.module:0.29"
 File[41]=".src/GPU/FEDID.form"
 File[42]=".src/GPU/FEDID.class:0.35"
 File[43]=".src/Modules/Logger.class:0.70"
@@ -78,12 +79,12 @@ File[46]=".src/Modules/FFileDialog.class:75.2"
 File[47]=".src/Modules/FInputDate.class:0.52"
 File[48]=".src/Reports/FCPUID_REPORT.module:44.14"
 File[49]=".src/CPU/MCPUSAGE.module:34.101"
-File[50]=".src/Reports/VALIDATE.module:61.15"
+File[50]=".src/Reports/VALIDATE.module:24.15"
 File[51]=".src/FValidate.form"
 File[52]=".src/FValidate.class:0.1"
 File[53]=".src/FCopyUrl.form"
 File[54]=".src/FCopyUrl.class:22.3"
-File[55]=".src/MStart.module:70.15"
+File[55]=".src/MStart.module:17.68"
 File[56]=".src/System/FSystemInfo.class:63.72"
 File[57]=".src/System/FSystemInfo.form"
 File[58]=".src/MConvert.module:20.0"
@@ -93,7 +94,7 @@ File[61]=".src/Memory/i2c.module:10.9"
 File[62]=".src/Memory/MDecode_dimms.module:0.63"
 File[63]="Data/screenfetch-dev:0.3399"
 File[64]=".src/Memory/JEDEC.module:27.54"
-Active=66
+Active=18
 Count=66
 File[65]=".src/System/MUptime.module:21.20"
 File[66]=".src/System/MSystem.module:0.0"
