--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper-compat (= 12), lsb-release, pkg-config,
  gambas3-devel (>= 3.8.4~) | gambas3-dev (>= 3.8.4~),
  gambas3-gb-desktop (>= 3.8.4~), gambas3-gb-desktop-x11,
  gambas3-gb-form (>= 3.8.4~), gambas3-gb-image (>= 3.8.4~), gambas3-gb-qt5,
- libcpuid-dev | libcpuid14-dev
+ libcpuid-dev (>= 0.5.0~)
 Standards-Version: 4.5.1
 Homepage: https://i-nex.linux.pl/
 Vcs-Git: https://github.com/i-nex/I-Nex.git
@@ -16,12 +16,11 @@ Rules-Requires-Root: no
 
 Package: i-nex
 Architecture: any-amd64 any-i386
-Depends: libcpuid15, mesa-utils, pastebinit, gambas3-gb-desktop (>= 3.8.4~),
- gambas3-gb-desktop-x11, gambas3-gb-form (>= 3.8.4~),
- gambas3-gb-image (>= 3.8.4~), gambas3-gb-qt5, gambas3-runtime (>= 3.8.4~),
- ${shlibs:Depends}, ${misc:Depends}
-Recommends: lm-sensors, lsb-release, mount, pciutils, x11-utils,
- x11-xserver-utils
+Depends: libcpuid15, curl, mesa-utils, pastebinit, scrot, x11-utils,
+ gambas3-gb-desktop (>= 3.8.4~), gambas3-gb-desktop-x11,
+ gambas3-gb-form (>= 3.8.4~), gambas3-gb-image (>= 3.8.4~), gambas3-gb-qt5,
+ gambas3-runtime (>= 3.8.4~), ${shlibs:Depends}, ${misc:Depends}
+Recommends: lm-sensors, lsb-release, mount, pciutils, x11-xserver-utils
 Replaces: i-nex (<< 0.6.0~)
 Description: probe and view system architecture and device information
  I-Nex is an application that gathers information about system hardware
